chore: update dependencies

--- a/packages/webapp/index.html
+++ b/packages/webapp/index.html
@@ -27,8 +27,8 @@
     <meta name="theme-color" content="#ffffff" />
     <title>UTags 书签管理</title>
     <script defer src="https://cloud.umami.is/script.js" data-website-id="0f07f0f5-b3be-4d94-bb22-6adf4b2375be"></script>
-    <link rel="preconnect" href="https://www.google-analytics.com">
-    <link rel="preconnect" href="https://www.googletagmanager.com">
+    <link rel="preconnect" href="https://www.google-analytics.com" />
+    <link rel="preconnect" href="https://www.googletagmanager.com" />
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-7FV6Z2SXHE"></script>
     <script>
